--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -1,1 +1,12 @@
 @import 'tailwindcss';
+
+@import 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+@theme {
+	--font-outfit: 'Outfit', sans-serif;
+}
+
+* {
+	font-family: 'Outfit', sans-serif;
+}
