--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,13 @@ body {
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2) !important;
 	width: 350px !important;
 }
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+input[type='number'] {
+	-moz-appearance: textfield;
+}
